# jmm-webassembly-compiler

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  typescript  uat.sh
TEST/: README
TEST/reference/: main
parser/: CMakeLists.txt
parser/src/: main.cpp  parser.y
src/: ast.cpp  ast.hpp  code_generator.cpp  code_generator.h  declarations.cpp  declarations.hpp  driver.cpp  driver.h  lexer.h  location.hh  main.cpp  parser.cpp  parser.hpp  parser.output  parser.ypp  position.hh  runtime_library.cpp  runtime_library.h  scope_stack.cpp  scope_stack.hpp  semantic_checker.cpp  semantic_checker.h  stack.hh  syntax.l  template.cpp  template.hpp  tokens.cpp  tokens.h
tests/: hello-world-no-space.txt  hello-world.txt  keywords.txt  spec.txt  strings.txt  weird-line-endings.txt
tests/ms2/: associativity.txt  conditionals.txt  error.txt  functions.txt  parenthesis.txt  precedence.txt  relational.txt  strings.txt
tests/ms3/: bad-operator-types.txt  break-statements.txt  control-statements.txt  functions.txt  hello-world.txt  local-declaration.txt  main-call.txt  main-parameters.txt  multiple-main.txt  no-main.txt  operator-types.txt  return.txt  scope.txt
tests/ms4/: gen.t34  global_int.txt  hw.txt  more-random.txt  printb_tests.txt  printc_tests.txt  printi.jmm  printi_tests.txt  prints_tests.txt  return_values.txt  sum.txt  unary.txt
wat_output/: art-life.wat  art-select.wat  art-sieve.wat  gen.t1.wat  gen.t11.wat  gen.t12.wat  gen.t13.wat  gen.t14.wat  gen.t15.wat  gen.t18.wat  gen.t22.wat  gen.t26.wat  gen.t29.wat  gen.t30.wat  gen.t31.wat  gen.t32.wat  gen.t33.wat  gen.t34.wat  gen.t5.wat  gen.wat  global_int.txt.wat  hw.txt.wat  more-random.txt.wat  printb_tests.txt.wat  printc_tests.txt.wat  printi_tests.txt.wat  prints_tests.txt.wat  result.wat  return_values.txt.wat  sum.txt.wat
